# paragu-auditor

./: .gitignore  ARCHITECTURE.md  DEMO_SCRIPT.md  LICENSE  README.md  pyproject.toml
data/: synthetic_ocds.jsonl
src/paragu_auditor/agent/: chat.py  prompts.py  tools.py
src/paragu_auditor/data/: jsonld_mapper.py  schemas.py  store.py
src/paragu_auditor/red_flags/: R003.py  R018.py  R024.py  R028.py  R058.py  runner.py
src/paragu_auditor/ui/: app.py
tests/data/: test_jsonld_mapper.py  test_store.py
tests/data/fixtures/: synthetic.py
tests/red_flags/: fixtures_R003.py  fixtures_R018.py  fixtures_R024_R028_R058.py  test_R003.py  test_R018.py  test_R024_R028_R058.py  test_runner.py
